[package]
name = "calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true

[dependencies]
anyhow = "1.0.68"
printpdf = "0.5.3"
rusttype = "0.9.3"
time = { version = "0.3.17", features = ["formatting", "parsing"] }
